--- a/bmiProjekt/MainWindow.xaml
+++ b/bmiProjekt/MainWindow.xaml
@@ -26,6 +26,7 @@
         <TextBox Name="HightBox" HorizontalAlignment="Left" Height="47" Margin="0,0.4,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="385" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
         <TextBox Name="WightBox" HorizontalAlignment="Left" Height="46" Margin="0,0.4,0,0" Grid.Row="3" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="395" Grid.ColumnSpan="2"/>
         <TextBox Name="InfoBox" HorizontalAlignment="Left" Height="46" Margin="0,0.4,0,0" Grid.Row="3" Grid.Column="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="395" Grid.ColumnSpan="1"/>
+        <TextBox Name="InfoBox1" HorizontalAlignment="Left" Height="46" Margin="0,0.4,0,0" Grid.Row="2" Grid.Column="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="395" Grid.ColumnSpan="1"/>
 
     </Grid>
 </Window>
